--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     
 </head>
 <body>
-<p id="first"></p>
-<span></span>
- 
+    <h1>NASA Facility Location & Weather</h1>
+   <ul></ul>
 
     <script src="js/main.js"></script>
 </body>
