--- a/NASAComplex/index.html
+++ b/NASAComplex/index.html
@@ -12,7 +12,7 @@
       <img src="media/logo.png" class="logo">
       <div>
         <h1>Get the weather for every NASA facility</h1>
-        <h2>Today is: <span class="date">July 11, 2019</span></h2>
+        <h2>Today is: <span class="date"></span></h2>
       </div>
     <button type="button" name="button">Generate List</button>
     <table class="myTable">
