--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <button type="button" name="">Click Me</button>
     <ol>
     </ol>
-    <script src="script/script.js"></script>
+    <script src="script/main.js"></script>
   </body>
 </html>
