--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
       <h1>Current Temperature of Nasa Locations</h1>
     </section>
     <table>
-      <tbody class="locations">
-      </tbody>
-
-
-      </table>
+      <tbody class="locations"></tbody></table>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
