--- a/nasaComplexAPI/nasaComplexAPI.html
+++ b/nasaComplexAPI/nasaComplexAPI.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>NASA Complex</title>
+    <link rel="stylesheet" href="nasaComplexAPI.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap" rel="stylesheet">
   </head>
   <h1>NASA Facilities and Weather</h1>
   <button type="button" name="button">Submit</button>
