--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Nasa Weather by Geographical Location</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <h1>Complex NASA API</h1>
   <img src="" alt="">
   <ul id="addInput"></ul>
   <span></span>
