added a color indicator to the tempurtures

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>
         <section class="format">Facility</section>
         <section class="format">Location</section>
-        <section class="format">Current Tempurture</section>
+        <section class="format">Current Tempurture (F &#176;)</section>
     </section>
     <section class="data">
 
