--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
-    <p></p>
-    <p class="temp"></p>
-    <p class="center"></p>
-    <p class="facility"></p>
-    <h1>hi</h1>
+<html lang="en">
+	<head>
+    	<meta charset="utf-8">
+    	<meta name="description" content="Your description goes here">
+    	<meta name="keywords" content="one, two, three">
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Blank Template</title>
 
-    <script type="text/javascript" src="js/main.js"></script>
-  </body>
+		<!-- external CSS link -->
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+	<body>
+		<h1>Temperature Data for All NASA Locations</h1>
+		<form class="" action="index.html" method="post">
+		<input id="city" type="text" name="city" value="" placeholder="City">
+		<input id="country" type="text" name="country" value="" placeholder="Country">
+		<button id="getWeather" type="button" name="button">Get Weather</button>
+		</form>
+		<p></p>
+		<ul></ul>
+		<!-- <span>Farenheit</span> -->
+	<!-- <script type="text/javascript" src="js/jsonformatter.js"></script> -->
+	<script type="text/javascript" src="js/main.js"></script>
+	</body>
 </html>
