--- a/complexNasaApi/index.html
+++ b/complexNasaApi/index.html
@@ -2,13 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Oxanium&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    <button type="button">Show NASA Facilities!</button>
-    <ul id='facilityList'>
-    </ul>
+    <section>
+      <img src="images/nasa.jpg" alt="">
+      <button type="button">SHOW NASA's FACILITIES IF YOU DARE</button>
+      <ul id='facilityList'>
+      </ul>
+    </section>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
