complex nasa 2nd push

--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
-    <h1>The Weather at each NASA'</h1>
-    <p></p>
-  <section>
-    <p class="temp"></p>
-  </section>
-  <section>
-    <p class="center"></p>
-  </section>
-  <section>
-    <p class="facility"></p>
-  </section>
-  <section>
-    <h1>hi</h1>
-  </section>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Complex NASA API</title>
+</head>
+<body>
+    <h1>Current Temperture of NASA's facilities</h1>
+    <section>
+        <section class="format">Facility</section>
+        <section class="format">Location</section>
+        <section class="format">Current Temperature (F &#176;)</section>
+    </section>
+    <section class="data"></section>
     <script type="text/javascript" src="js/main.js"></script>
-  </body>
+</body>
 </html>
