added css and comments

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
             <img src="img/nasalogo.png" alt="logo">
             <h1>Facilties</h1>
             <form class="form">
-                <input class="input" type="text" name="" value="">
+                <input class="input" type="text" name="" placeholder="Facility zip e.g. 91109" value="">
                 <input class="submit" type="submit" name="" value="Submit">
             </form>
         </section>
-        <section class="displaySec">
-            <p id="facility"></p>
+        <section class="list">
+            <p id="tempDisplay"></p>
+            <ul id="facility">
+                <li class="hide"></li>
+            </ul> 
         </section>
     </section>
     <script src="js/main.js"></script>
