--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<header></header>
 		<section class="container">
-			<h1>All NASA facilities and weather</h1>
-			<button id="button" type="button">What's the Weather?</button>
+			<h1>All NASA Facilities and Weather</h1>
+			<button id="button" type="button">WHAT'S THE WEATHER?</button>
 			<ul id="facilities">
 
 			</ul>
 		</section>
-		<footer></footer>
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
