display on page load

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p>Get NASA Facilities and display location and temperature for each</p>
   		<!-- <input id='city' type="text" name="" value="" placeholder='City' > -->
 
-  		<button type="button" name="button">Start!</button>
+  		<!-- <button type="button" name="button">Start!</button> -->
 
   		<h2 id='reponseHeader' class=''>Facilities</h2>
       <ol id='facilities'>
