--- a/index.html
+++ b/index.html
@@ -8,22 +8,25 @@
 		<title>Complex Nasa API</title>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Righteous&family=Teko:wght@300&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<main>
+			<h1>Nasa Facility API</h1>
+			<table>
+				<tbody>
+					<tr>
+						<td class="columnTitles" >Facility</td>
+						<td class="columnTitles" >Location</td>
+						<td class="columnTitles" >Weather</td>
+					</tr>
+				</tbody>
+			</table>
+		</main>
 
-		<h1>Complex Nasa API</h1>
-		<table>
-			<tbody>
-				<tr>
-					<td>#</td>
-					<td>Facility</td>
-					<td>Location</td>
-					<td>Weather</td>
-				</tr>
-			</tbody>
-		</table>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
