--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<td id="right" class= "bold">Current Weather</td>
 				</tr>
 			</tbody>
-			<tbody id="result"></tbody>
+			<tbody></tbody>
 		</table>
 	</section>
 		<script type="text/javascript" src="js/main.js"></script>
