--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
 	</head>
 	<body>
 
-		<h1>Nasa Locations in the USA</h1>
+		<h1>Nasa Locations & weather in the USA</h1>
 		<!-- <input class="zip" type="text" placeholder="Enter Zip Code" value=""> -->
 		<!-- <input class="country" type="text" placeholder="Country"> -->
-		<button type="button" name="button">Click Me Get All Nasa US Locations</button>
+		<div>
 
-		<!-- <h2>Name</h2> -->
-		<img src="" alt="">
-		<h3>Description</h3>
-		<h4 class="temp"></h4>
-		<h4 class="state"></h4>
-		<h4 class="center"></h4>
+			<button type="button" name="button">Get Nasa US Locations</button>
+			
+			<!-- <h2>Name</h2> -->
+			<img src="" alt="">
+			<h3>Description</h3>
+			<h4 class="temp"></h4>
+			<h4 class="state"></h4>
+			<h4 class="center"></h4>
+		</div>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
