--- a/index.html
+++ b/index.html
@@ -10,19 +10,12 @@
 	</head>
 	<body>
 
-		<h1>Which date?</h1>
-		<input type="date" name="" value="">
-		<button type="button" name="button">Reach for the stars</button>
-
-		<h2 id="stars">Name</h2>
-		<img src="" alt="">
-		<iframe src="" title=""></iframe>
-		<h3 id="description">Description</h3>
-        
-        <h4 class="location">Location</h4>
-        <h4 class="nasa">Nasa Facility</h4>
-        <h5 class="weather">Weather</h5>
-        <h5 class="temp">temp</h5>
+		<h1>NASA's facility, its location, and the weather at the facility currently.</h1>
+		<button id="button">Find Me you Coward!</button>
+		<main>
+			<ul id="nasaList"></ul>
+		</main>
+		
 
 		<script type="text/javascript" src="main.js"></script>
 	</body>
