update to js, css and html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
 </head>
 <body>
 
+<section class="top">
+  <header>
+    <h1>Complex NASA API</h1>
+  </header>
+
+  <main>
+    <form class="searchButton" action="index.html" method="post">
+      <button type="button" name="button">GET NASA LOCATIONS</button>
+      <section>
+        <p class="green">Green = Facility</p>
+        <p class="yellow">Yellow = Current Temperture</p>
+        <p class="purple">Purple = City</p>
+        <p class="blue">blue = State</p>
+      </section>
+    </form>
+</section>
+
+<section>
+  <ul>
+
+  </ul>
+</section>
+
+</main>
 
 
 
