--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>NASA Facilities</h1>
-    <button>see Facilities</button>
+    <header>
+        <h1>NASA Facilities</h1>
+        <button>See Facilities</button>
+    </header>   
     <ul></ul>
     <img src="" alt="">
     <p></p>
