--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1>NASA facility Weather</h1>
     <button>Get Weather</button>
-    <li></li>
+    <!-- <li></li> -->
     <div>
        <p id="facility"></p>
        <p id="city"></p>
@@ -19,8 +19,20 @@
         
        <p id="temp"></p>
     </div>
-<section>
+<section id="first">
     <div id="toDoContainer"></div>
+</section>
+<section id="second">
+    <div id="toDoContainerOne"></div>
+</section>
+<section id="third">
+    <div id="toDoContainerTwo"></div>
+</section>
+<section id="fourth">
+    <div id="toDoContainerThree"></div>
+</section>
+<section id="fifth">
+    <div id="toDoContainerFour"></div>
 </section>
     
 
