--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<meta name="keywords" content="one, two, three">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>COMPLEX NASA API</title>
+		<title>COMPLEX NASA API!</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
