--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">		
 </head>
 	<body>
 		<header>
-			<h1>Welcome to Tenzin's Log of 400 NASA Facilities and the Weather there!</h1>
-			<h4>😎</h4>
+			<h1>Welcome to Tenzin's Log of <br>ALL NASA Facilities Names, The Center, their City Location with Weather</h1>
+			<h4>👩‍💻🔬👩‍🔬</h4>
 		</header>
 		
 		<h2></h2>
