--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     	<meta charset="utf-8">
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Press+Start+2P&display=swap" rel="stylesheet">
 
-		<title>Title in the tab</title>
+		<title>NASA Facilities</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
