--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <title>ComplexNASAAPI</title>
 </head>
 <body>
-    <h1>Are you looking for a NASA facility? Look no further</h1>
-    <h2 class="name"></h2>
-    <button>Search</button>
+    <section class="astro">
+        <h1>NASA Facilities</h1>
+        <p>Hit Search to view all of NASA facilities and its local weather <button>Search</button> </p>
+    </section>
     <ul></ul>
-    <h2 class="location"></h2>
-    <h2 class="weather"></h2>
-
     <script src="js/main.js"></script>
 </body>
 </html>
