--- a/nas.html
+++ b/nas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/nas.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,6 +12,8 @@
     <button id="hitButton">Show Locations</button>
 
     <ul id ="list"></ul>
+
+    <footer class="footer">Made With Love in Philly &hearts; Visit our website <a href="http://fsdevkd.com">FSDevKD</a> for more</footer>
 
     <script src="/nas.js"></script>
 </body>
