--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 	<div class=" right">
 		<div class="list-box">
 			<ul>
+				<li class="fixed">Click on NASA center name to find the temperature at that location</li>
 			</ul>
 		</div>
 	</div>
