--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/styles.css"> 
     <title>Complex NASA API</title>
 </head>
 <body>
-    <h1>Let's check the weather</h1>
-    <button type="button" name="button">Go</button>
-
-	<h2></h2>
-    <ol id="facility">
+    <header>
+        <div>
+            <h1>Let's check the weather!</h1>
+            <p>Click the button to get the weather at all 400+ of the NASA locations.</p>
+            <button type="button" name="button">Go</button>
+        </div>
+    </header>
+    <section>
+    <h2></h2>
+        <ol id="facility">
         <!--List of children to be appended-->
-    </ol>
+        </ol>
+</section>
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
