--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <title>Nasa Facilities Name and Weather</title>
 
+  <link rel="icon" type="image/png"
+        href="https://cdn-icons-png.flaticon.com/512/290/290836.png">
+
   <!-- external CSS link -->
   <link rel="stylesheet" href="assets/css/main.css">
 
@@ -20,21 +23,12 @@
 <body>
 
   <h1 class="text-success"> Nasa Facilities Name and Current Weather 🧑‍🚀</h1>
-  <!-- <label for="Get-Facility">Name of Facility: </label>
-  <input id="facility" placeholder="Enter facility here" type="text" name="" value="">
-  <label for="Get-Temp">Enter zip code for current temp at location: </label>
-  <input id="zipCode" placeholder="Enter zip code here" type="number" name="" value=""> -->
 
   <div class="d-grid gap-2 col-3 mx-auto">
     <button type="button" class="btn btn-success"> Get☀️Facility🌧️Weather🌈</button>
   </div>
 
- 
   
-
-  <!-- Will Print Name of country or city -->
-  <!-- <h2>Facility Location and weather 🧑‍🚀:</h2> -->
-
   <div class="table-wrapper">
     <table class="table table-hover table-dark" id="hidden">
       <thead>
@@ -46,11 +40,6 @@
         </tr>
       </thead>
       <tbody>
-        <!-- <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-          </tr> -->
       </tbody>
     </table>
   </div>
